--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -64,7 +64,7 @@ const links: ListItem[] = [
 
   @controller
   export class NavOpenElement extends HTMLElement {
-    @attr open = false;
+    @attr open = true;
     @target btn!: HTMLButtonElement;
     @targets links!: HTMLAnchorElement[];
 
