--- a/src/components/TOC.astro
+++ b/src/components/TOC.astro
@@ -1,5 +1,6 @@
 ---
 import type { MarkdownHeading } from "astro";
+import { Icon } from "astro-icon/components";
 import { scope } from "simple:scope";
 
 type Props = {
@@ -13,16 +14,7 @@ const { headings } = Astro.props;
   <div class="panel dark:bg-gray-950">
     <div class="progress-container">
       <progress data-target="table-contents.progress" max="1"></progress>
-      <svg
-        class="done"
-        xmlns="http://www.w3.org/2000/svg"
-        width="32"
-        height="32"
-        viewBox="0 0 512 512"
-        ><path
-          d="M448 71.9c-17.3-13.4-41.5-9.3-54.1 9.1L214 344.2l-99.1-107.3c-14.6-16.6-39.1-17.4-54.7-1.8-15.6 15.5-16.4 41.6-1.7 58.1 0 0 120.4 133.6 137.7 147 17.3 13.4 41.5 9.3 54.1-9.1l206.3-301.7c12.6-18.5 8.7-44.2-8.6-57.5z"
-          fill="white"></path></svg
-      >
+      <Icon name="check" />
     </div>
     <ul class="p-5 pb-3" id={scope("panel")} role="list">
       {
