--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -3,6 +3,7 @@ import type { MarkdownHeading } from "astro";
 import { isMatch } from "./Nav";
 import Toc from "./TOC.astro";
 import { scope } from "simple:scope";
+import { createRoot } from "../utils.client";
 
 type Props = {
   headings: MarkdownHeading[] | undefined;
@@ -21,9 +22,11 @@ const links: ListItem[] = [
   { label: "Talks", path: "/talks" },
   { label: "Videos", path: "/videos" },
 ];
+
+const { name: Root, target, action } = createRoot("nav-open");
 ---
 
-<nav-open data-open class="group">
+<Root data-open class="group">
   <nav
     class="group-[[data-open]]:dark:bg-gray-950 sticky top-0 max-w-[100ch] flex gap-6 items-center text-lg py-3 px-5 transition-colors duration-300"
   >
@@ -33,7 +36,7 @@ const links: ListItem[] = [
         links.map((l, idx) => (
           <li style={{ "--idx": idx + 1 }}>
             <a
-              data-targets="nav-open.links"
+              data-targets={target("links")}
               data-active={isMatch(urlPath, l.path)}
               class="no-underline text-lg block scale-1 dark:text-gray-300 data-[active]:text-white data-[active]:font-bold data-[active]:scale-110 transition-transform spring-5"
               href={l.path}
@@ -46,8 +49,8 @@ const links: ListItem[] = [
     </ul>
     <div>
       <button
-        data-action="click:nav-open#toggle"
-        data-target="nav-open.btn"
+        onclick={action("toggle")}
+        data-target={target("btn")}
         aria-controls={id}
       >
         <div class="stripe stripe-top"></div>
@@ -56,11 +59,12 @@ const links: ListItem[] = [
       </button>
     </div>
   </nav>
-</nav-open>
+</Root>
 
 <script>
   import { attr, target, targets, controller } from "@github/catalyst";
   import { isMatch } from "./Nav";
+  import { toAttr } from "../utils.client";
 
   @controller
   export class NavOpenElement extends HTMLElement {
@@ -110,7 +114,7 @@ const links: ListItem[] = [
 
     toggle() {
       this.open = !this.open;
-      this.btn.toggleAttribute("aria-expanded", this.open);
+      this.btn.ariaExpanded = toAttr(this.open);
     }
   }
 </script>
