feat: blinking whiteboard

--- a/src/components/heading/Heading.astro
+++ b/src/components/heading/Heading.astro
@@ -1,6 +1,7 @@
 ---
 import { Icon } from "astro-icon/components";
 import Button from "./Button.astro";
+import Whiteboard from "./Whiteboard.astro";
 ---
 
 <section class="flex max-w-[120ch] items-center justify-center mx-auto p-3">
@@ -23,12 +24,7 @@ import Button from "./Button.astro";
       </Button>
     </div>
   </div>
-  <img
-    width="577"
-    height="600"
-    src="/board-static.svg"
-    alt="Whiteboard with smiling face drawn"
-  />
+  <Whiteboard />
 </section>
 
 <style>
