--- a/src/components/TOC.astro
+++ b/src/components/TOC.astro
@@ -2,20 +2,18 @@
 import type { MarkdownHeading } from "astro";
 import { Icon } from "astro-icon/components";
 import { scope } from "simple:scope";
-import { createRoot } from "../utils.client";
 
 type Props = {
   headings: MarkdownHeading[];
 };
 
 const { headings } = Astro.props;
-const { name: Root, target, action } = createRoot("table-contents");
 ---
 
-<Root>
+<my-toc>
   <div class="panel dark:bg-gray-950">
     <div class="progress-container">
-      <progress data-target={target("progress")} max="1"></progress>
+      <progress data-target="my-toc.progress" max="1"></progress>
       <Icon class="done" name="check" />
     </div>
     <ul class="p-5 pb-3" id={scope("panel")} role="list">
@@ -29,14 +27,14 @@ const { name: Root, target, action } = createRoot("table-contents");
     </ul>
   </div>
   <button
-    onclick={action("toggleMenu")}
-    data-target={target("btn")}
+    data-action="click:my-toc#toggleMenu"
+    data-target="my-toc.btn"
     aria-controls={scope("panel")}
     class="transition-all ease-spring-3 duration-500"
   >
     <div class="inner">1</div>
   </button>
-</Root>
+</my-toc>
 
 <script>
   import { attr, target, controller } from "@github/catalyst";
@@ -44,7 +42,7 @@ const { name: Root, target, action } = createRoot("table-contents");
   import { toAttr } from "../utils.client";
 
   @controller
-  export class TableContentsElement extends HTMLElement {
+  export class MyTocElement extends HTMLElement {
     @attr open = false;
     @attr doneReading = false;
     @target declare btn: HTMLButtonElement;
