--- a/src/components/heading/Whiteboard.astro
+++ b/src/components/heading/Whiteboard.astro
@@ -1,7 +1,5 @@
 ---
-import { createRoot } from "../../utils.client";
 
-const { name: Root, target } = createRoot("my-whiteboard");
 ---
 
 <script>
@@ -54,7 +52,7 @@ const { name: Root, target } = createRoot("my-whiteboard");
   }
 </script>
 
-<Root>
+<my-whiteboard>
   <svg
     width="556"
     height="970"
@@ -85,14 +83,14 @@ const { name: Root, target } = createRoot("my-whiteboard");
         rx="20"
         fill="url(#paint1_radial_222_3)"
         fill-opacity="0.2"></rect>
-      <g data-target={target("face")}>
+      <g data-target="my-whiteboard.face">
         <path
           d="M158.262 319.189C168.246 330.416 185.183 338.872 211.569 338.872C237.955 338.872 254.892 330.416 264.876 319.189"
           stroke="#6200FF"
           stroke-width="25"
           stroke-linecap="round"></path>
         <rect
-          data-targets={target("eyes")}
+          data-targets="my-whiteboard.eyes"
           x="90.7898"
           y="201.2"
           width="20.5027"
@@ -100,7 +98,7 @@ const { name: Root, target } = createRoot("my-whiteboard");
           rx="10.2514"
           fill="#6200FF"></rect>
         <rect
-          data-targets={target("eyes")}
+          data-targets="my-whiteboard.eyes"
           x="307.299"
           y="201.2"
           width="20.5027"
@@ -287,4 +285,4 @@ const { name: Root, target } = createRoot("my-whiteboard");
       </linearGradient>
     </defs>
   </svg>
-</Root>
+</my-whiteboard>
