fix: iben -> mycomputer

--- a/src/components/iBen/Frame.astro
+++ b/src/components/iBen/Frame.astro
@@ -93,7 +93,7 @@ const showcaseSrc = getImgSrc(showcaseVideo);
   const [_showcase, ...otherVideos] = videoIds;
 
   @controller
-  class iBenElement extends HTMLElement {
+  class MyComputerElement extends HTMLElement {
     @attr playing = false;
     @attr welcome = true;
     @attr videoIdx = 0;
