--- a/src/components/heading/Heading.astro
+++ b/src/components/heading/Heading.astro
@@ -1,10 +1,11 @@
 ---
 import { Icon } from "astro-icon/components";
-import Button from "./Button.astro";
 import Whiteboard from "./Whiteboard.astro";
 ---
 
-<section class="flex max-w-[120ch] items-center justify-center mx-auto p-3">
+<my-whiteboard
+  class="flex max-w-[120ch] items-center justify-center mx-auto p-3"
+>
   <div>
     <h1 class="text-9xl">
       Hi, I'm <strong
@@ -16,16 +17,133 @@ import Whiteboard from "./Whiteboard.astro";
       The <span class="text-white">whiteboard guy</span> who codes kinda well.
     </p>
     <div class="flex gap-6">
-      <Button is="a" data-watch-btn>
+      <button
+        class="px-7 py-2 font-bold rounded-xl flex items-center justify-center gap-4 no-underline relative text-xl"
+        data-watch-btn
+      >
         Watch <Icon name="arrow-down" class="mx-[-3px] mb-[2px]" />
-      </Button>
-      <Button is="button" data-draw-btn>
+      </button>
+      <button
+        class="px-7 py-2 font-bold rounded-xl flex items-center justify-center gap-4 no-underline relative text-xl"
+        is="button"
+        data-draw-btn
+        data-action="click:my-whiteboard#clearTheBoard"
+      >
         Draw <Icon name="draw" class="mb-[2px]" />
-      </Button>
+      </button>
     </div>
   </div>
   <Whiteboard />
-</section>
+</my-whiteboard>
+
+<script>
+  import { gsap } from "gsap";
+  import { controller, target, targets } from "@github/catalyst";
+  import { fisherYatesShuffle } from "../../utils.client";
+  import MotionPathPlugin from "gsap/MotionPathPlugin";
+  import { transitionEnabledOnThisPage } from "astro:transitions/client";
+
+  gsap.registerPlugin(MotionPathPlugin);
+
+  const xPoolInitial = [-30, -15, 0, 15, 30];
+  const yPoolInitial = [-80, -40, 0, 40, 80, 120];
+
+  @controller
+  class MyWhiteboardElement extends HTMLElement {
+    @target face!: SVGElement;
+    @target scribble!: SVGPathElement;
+    @target eraser!: SVGElement;
+    @targets eyes!: SVGElement[];
+
+    #xPool = fisherYatesShuffle(xPoolInitial);
+    #yPool = fisherYatesShuffle(yPoolInitial);
+    #xIdx = 0;
+    #yIdx = 0;
+
+    #faceAnim?: gsap.core.Tween;
+    #eyesAnim?: gsap.core.Timeline;
+
+    #cleared = false;
+
+    clearTheBoard() {
+      if (this.#cleared) return;
+      this.#cleared = true;
+      const offset = 1600;
+      this.#faceAnim?.pause();
+      this.#eyesAnim?.pause();
+
+      const eraserRect = this.eraser.getBoundingClientRect();
+      const scribbleRect = this.face.getBoundingClientRect();
+
+      const eraseTl = gsap.timeline().to(this.eraser, {
+        x: -eraserRect.left + scribbleRect.left - 16,
+        y: -eraserRect.top + scribbleRect.top - 40,
+        ease: "elastic.out(1,1)",
+        duration: 0.4,
+      });
+      for (let i = 1; i <= 6; i++) {
+        eraseTl.to(this.eraser, {
+          duration: 0.16,
+          delay: i === 1 ? -0.1 : 0,
+          ease: "power2.out",
+          motionPath: {
+            // Different offset to account for stroke width
+            offsetX: -eraserRect.left + scribbleRect.left - 38,
+            offsetY: -eraserRect.top + scribbleRect.top - 70,
+            path: this.scribble,
+            start: (i - 1) / 6,
+            end: i / 6,
+          },
+        });
+        eraseTl.to(
+          this.scribble,
+          {
+            ease: "power2.out",
+            duration: 0.16,
+            strokeDashoffset: offset - (offset * i) / 6,
+          },
+          "<"
+        );
+      }
+      eraseTl.to(this.eraser, {
+        x: 0,
+        y: 0,
+        ease: "elastic.out(1,1)",
+        duration: 0.4,
+      });
+    }
+
+    connectedCallback() {
+      this.#faceAnim = gsap.to(this.face, {
+        x: () => {
+          const next = this.#xPool[this.#xIdx];
+          this.#xIdx = (this.#xIdx + 1) % this.#xPool.length;
+          return next!;
+        },
+        y: () => {
+          const next = this.#yPool[this.#yIdx];
+          this.#yIdx = (this.#yIdx + 1) % this.#yPool.length;
+          return next!;
+        },
+        repeatRefresh: true,
+        repeat: -1,
+        repeatDelay: 4,
+        duration: 1,
+        delay: 4,
+        ease: "elastic.out(1, 0.5)",
+      });
+
+      this.#eyesAnim = gsap
+        .timeline()
+        .set(this.eyes, { transformOrigin: "center bottom" })
+        .to(this.eyes, { scaleY: 0.2, duration: 0.2 })
+        .to(this.eyes, { scaleY: 1, duration: 0.2 })
+        .repeatDelay(3)
+        .delay(2)
+        .repeat(-1);
+    }
+  }
+</script>
 
 <style>
   [data-watch-btn] {
