--- a/src/components/heading/Heading.astro
+++ b/src/components/heading/Heading.astro
@@ -24,12 +24,17 @@ import Whiteboard from "./Whiteboard.astro";
         Watch <Icon name="arrow-down" class="mx-[-3px] mb-[2px]" />
       </button>
       <button
-        class="px-7 py-2 font-bold rounded-xl flex items-center justify-center gap-4 no-underline relative text-xl"
+        class="group/btn disabled:brightness-[80%] disabled:scale-y-95 disabled:translate-y-1 font-bold rounded-2xl pb-2 px-1 no-underline text-xl"
         is="button"
         data-draw-btn
+        data-target="my-whiteboard.drawBtn"
         data-action="click:my-whiteboard#clearTheBoard"
       >
-        Draw <Icon name="draw" class="mb-[2px]" />
+        <span
+          class="group-disabled/btn:scale-105 group-disabled/btn:rounded-2xl group-disabled/btn:scale-y-110 origin-top rounded-xl px-8 py-2 flex items-center justify-center gap-4"
+        >
+          Draw <Icon name="draw" class="mb-[2px]" />
+        </span>
       </button>
     </div>
   </div>
@@ -38,10 +43,9 @@ import Whiteboard from "./Whiteboard.astro";
 
 <script>
   import { gsap } from "gsap";
-  import { controller, target, targets } from "@github/catalyst";
-  import { fisherYatesShuffle } from "../../utils.client";
+  import { attr, controller, target, targets } from "@github/catalyst";
+  import { fisherYatesShuffle, toAttr } from "../../utils.client";
   import MotionPathPlugin from "gsap/MotionPathPlugin";
-  import { transitionEnabledOnThisPage } from "astro:transitions/client";
 
   gsap.registerPlugin(MotionPathPlugin);
 
@@ -53,6 +57,7 @@ import Whiteboard from "./Whiteboard.astro";
     @target face!: SVGElement;
     @target scribble!: SVGPathElement;
     @target eraser!: SVGElement;
+    @target drawBtn!: HTMLButtonElement;
     @targets eyes!: SVGElement[];
 
     #xPool = fisherYatesShuffle(xPoolInitial);
@@ -60,14 +65,15 @@ import Whiteboard from "./Whiteboard.astro";
     #xIdx = 0;
     #yIdx = 0;
 
+    drawing = false;
+
     #faceAnim?: gsap.core.Tween;
     #eyesAnim?: gsap.core.Timeline;
 
-    #cleared = false;
-
     clearTheBoard() {
-      if (this.#cleared) return;
-      this.#cleared = true;
+      if (this.drawing) return;
+      this.drawing = true;
+      this.drawBtn.disabled = this.drawing;
       const offset = 1600;
       this.#faceAnim?.pause();
       this.#eyesAnim?.pause();
@@ -160,23 +166,25 @@ import Whiteboard from "./Whiteboard.astro";
     border-radius: theme(borderRadius.2xl);
     background: linear-gradient(139deg, #6200ff 23.15%, #3b0493 74.32%);
   }
-  [data-draw-btn] {
+  [data-draw-btn] span {
     background: linear-gradient(
         288deg,
         rgba(49, 62, 81, 0.2) 59.32%,
         rgba(133, 155, 187, 0.2) 92.52%
       ),
       linear-gradient(129deg, #334155 27.53%, #303c4f 67.2%);
-    /* background: red; */
+    transition:
+      transform 0.5s var(--ease-spring-4),
+      filter 0.18s,
+      border-radius 0.3s;
   }
-  [data-draw-btn]:before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    inset: -0.2rem;
-    bottom: -0.35rem;
-    top: 0;
-    border-radius: theme(borderRadius.2xl);
+  [data-draw-btn]:not(:disabled) span:hover {
+    filter: brightness(1.25);
+  }
+  [data-draw-btn] {
     background: linear-gradient(139deg, #2f3d4f 23.15%, #131f31 74.32%);
+    transition:
+      transform 0.5s var(--ease-spring-4),
+      filter 0.3s;
   }
 </style>
