chore: remove unused imports

--- a/src/components/heading/Heading.astro
+++ b/src/components/heading/Heading.astro
@@ -43,8 +43,8 @@ import Whiteboard from "./Whiteboard.astro";
 
 <script>
   import { gsap } from "gsap";
-  import { attr, controller, target, targets } from "@github/catalyst";
-  import { fisherYatesShuffle, toAttr } from "../../utils.client";
+  import { controller, target, targets } from "@github/catalyst";
+  import { fisherYatesShuffle } from "../../utils.client";
   import MotionPathPlugin from "gsap/MotionPathPlugin";
 
   gsap.registerPlugin(MotionPathPlugin);
