feat: I make videos header

--- a/src/components/iBen/Frame.astro
+++ b/src/components/iBen/Frame.astro
@@ -8,6 +8,16 @@ import { Icon } from "astro-icon/components";
 const showcaseSrc = getImgSrc(showcaseVideo);
 ---
 
+<div class="mt-24 text-center">
+  <h2 id="videos" class="scroll-mt-4 text-8xl mb-4">
+    I make <span class="text-cyan-300 font-bold">videos.</span>
+  </h2>
+  <p class="dark:text-slate-400 text-xl">
+    About the hardest parts of <strong class="font-normal dark:text-slate-50"
+      >web development.</strong
+    >
+  </p>
+</div>
 <my-computer data-welcome class="dark:bg-gray-900 sm:px-6 px-2">
   <div data-container class="py-8 max-w-prose mx-auto grid relative">
     <img
